Bug 172487 - [testcase] Absolutely positioned element with top: auto is incorrectly (left, horizontally) offset
Summary: [testcase] Absolutely positioned element with top: auto is incorrectly (left,...
Status: VERIFIED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.1.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL: http://www.gtalbot.org/BrowserBugsSec...
Keywords:
: 172704 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-10-10 03:23 UTC by Gérard Talbot (no longer involved)
Modified: 2009-01-26 12:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gérard Talbot (no longer involved) 2008-10-10 03:23:45 UTC
Testcase:
http://www.gtalbot.org/BrowserBugsSection/MSIE8Bugs/TopAutoOffsetMiscalculation.html

Expected results:
The yellow box and the green box should be side by side, at the same vertical position within the document.

Actual results in Konqueror 4.1.1 for Windows:
The green box overlaps, covers, masks the yellow box.

Relevant code:

#GreenBox
{
 position: absolute;
 top: auto;
}

(...)

  <div><img src="../../GRAPHICS/PNG/YellowBoxTopAuto.png" alt=
  "Image download must be enabled for this test"> <img id="GreenBox" src=
  "../../GRAPHICS/PNG/GreenBoxTopAuto.png" alt=
  "Image download must be enabled for this test"></div>

Regards, Gérard
Comment 1 Germain Garand 2008-10-13 17:15:01 UTC
*** Bug 172704 has been marked as a duplicate of this bug. ***
Comment 2 Germain Garand 2008-10-13 22:50:49 UTC
SVN commit 871068 by ggarand:

fix static positioning of positioned inline replaced elements.

BUG: 172487


 M  +0 -6      render_replaced.cpp  
 M  +0 -2      render_replaced.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=871068
Comment 3 Germain Garand 2008-10-20 00:34:06 UTC
SVN commit 873676 by ggarand:

automatically merged revision 871068:
fix static positioning of positioned inline replaced elements.

BUG: 172487

 M  +0 -6      render_replaced.cpp  
 M  +0 -2      render_replaced.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=873676
Comment 4 Gérard Talbot (no longer involved) 2009-01-26 12:06:00 UTC
I get expected results with Konqueror 4.1.3 for Windows.
Marking as VERIFIED