automatically merged revision 871068: fix static positioning of positioned inline replaced elements.

BUG: 172487

svn path=/branches/KDE/4.1/kdelibs/; revision=873676