khtml/rendering/render_replaced.h
@@ -57,8 +57,6 @@ public:
     void setIntrinsicWidth(int w) {  m_intrinsicWidth = w; }
     void setIntrinsicHeight(int h) { m_intrinsicHeight = h; }
 
-    virtual void position(InlineBox*, int, int, bool);
-
     // Return before, after (offset set to max), or inside the replaced element,
     // at @p offset
     virtual FindSelectionResult checkSelectionPoint( int _x, int _y, int _tx, int _ty,
